<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xinzhihui.mydvr.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/factory_setting_title"
        android:textSize="26sp" />

    <LinearLayout
        android:id="@+id/lly_front_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/factory_front_id"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_front"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lly_behind_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/factory_behind_id"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_behind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"></Spinner>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lly_storage_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/factory_storage_select"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_storage_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"></Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/factory_app_auto"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/switch_app_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirm"
        android:textSize="20sp" />

</LinearLayout>
