<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xinzhihui.mydvr.fragment.LockVideoFragment">

    <!-- TODO: Update blank fragment layout -->
    <ListView
        android:id="@+id/listview_file"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lay"></ListView>

    <TextView
        android:id="@+id/tv_filelist_emty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/file_explorer_no_file"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lay"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00f0f0"
        android:layout_alignParentBottom="true"
        android:weightSum="4"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/operate_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/back"
            android:textSize="22sp"
            android:background="@drawable/selector"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <TextView
            android:id="@+id/operate_select"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/all_select"
            android:textSize="22sp"
            android:background="@drawable/selector"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:id="@+id/invert_select"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/inverse_select"
            android:textSize="22sp"
            android:background="@drawable/selector"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <TextView
            android:id="@+id/operate_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/file_explorer_unlock"
            android:textSize="22sp"
            android:background="@drawable/selector"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
    </LinearLayout>

</RelativeLayout>
